--- a/env.example
+++ b/env.example
@@ -11,8 +11,15 @@ STRIPE_SECRET_KEY="sk_test_..."
 STRIPE_WEBHOOK_SECRET="whsec_..."
 
 # Email (optional - for notifications)
+# Option 1: SMTP
 EMAIL_SERVER_HOST=""
 EMAIL_SERVER_PORT=""
 EMAIL_SERVER_USER=""
 EMAIL_SERVER_PASSWORD=""
 EMAIL_FROM=""
+
+# Option 2: Resend (recommended)
+RESEND_API_KEY=""
+
+# Option 3: SendGrid
+SENDGRID_API_KEY=""
