--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -7,7 +7,7 @@ WORKDIR /app
 
 # Install dependencies
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN npm install --legacy-peer-deps
 
 # Copy application files
 COPY . .
