--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    image: mentors-commission-app:latest
+    container_name: mentors-commission-app-1
     ports:
       - "3000:3000"
     environment:
