Fix production deployment: Prisma SSL compatibility and database configuration
- Update Prisma binaryTargets to debian-openssl-3.0.x for Debian Bookworm compatibility
- Remove libssl1.1 dependency from Dockerfile (use only libssl3 for OpenSSL 3.0)
- Add explicit DATABASE_URL in docker-compose.yml for production deployments
- Add production deployment guides (PRODUCTION_UPDATE_GUIDE.md and QUICK_DEPLOY.md)

These changes fix Prisma SSL compatibility issues and ensure proper database path configuration for Hostinger VPS deployments.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     # Fallback environment variables (use .env file in production instead)
     environment:
       - NODE_ENV=production
+      - DATABASE_URL=file:///app/prisma/dev.db
     volumes:
       - ./prisma:/app/prisma
     restart: unless-stopped
